start working on a branch, loser

--- a/pandas.ipynb
+++ b/pandas.ipynb
@@ -1037,10 +1037,39 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "### Asking Questions\n",
+    "\n",
+    "Armed with all this knowledge, we can start asking questions!\n",
+    "\n",
+    "One of my first questions might be... what do all the columns mean? This dataset was thankfully presented with a [data dictionary](https://www.kaggle.com/neuromusic/avocado-prices/home).\n",
+    "\n",
+    "`Date` - The date of the observation\n",
+    "\n",
+    "`AveragePrice` - the average price of a single avocado\n",
+    "\n",
+    "`Total Volume` - Total number of avocados sold\n",
+    "\n",
+    "`4046` - Total number of avocados with PLU 4046 sold\n",
+    "\n",
+    "`4225` - Total number of avocados with PLU 4225 sold\n",
+    "\n",
+    "`4770` - Total number of avocados with PLU 4770 sold\n",
+    "\n",
+    "`type` - conventional or organic\n",
+    "\n",
+    "`year` - the year\n",
+    "\n",
+    "`region` - the city or region of the observation\n",
+    "\n",
+    "*We seem to be missing definitions for columns `[Total Bags, Small Bags, Large Bags, XLarge Bags]`, but we can probably deduce what those mean on our own.*\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
