adding new data files

--- a/pandas.ipynb
+++ b/pandas.ipynb
@@ -1064,7 +1064,8 @@
     "\n",
     "`region` - the city or region of the observation\n",
     "\n",
-    "*We seem to be missing definitions for columns `[Total Bags, Small Bags, Large Bags, XLarge Bags]`, but we can probably deduce what those mean on our own.*\n"
+    "*We seem to be missing definitions for columns `[Total Bags, Small Bags, Large Bags, XLarge Bags]`, but we can probably deduce what those mean on our own.*\n",
+    "\n"
    ]
   },
   {
