added a line about webscraping

--- a/intro_to_python.ipynb
+++ b/intro_to_python.ipynb
@@ -11,6 +11,7 @@
     "Here's how I use it in my day-to-day as a data reporter:\n",
     "* Analyze and visualize data\n",
     "* Build websites and interactives \n",
+    "* Scrape websites\n",
     "* Build and manage databases \n",
     "* Scrape PDFs for information \n",
     "\n",
