started joins/merges

--- a/pandas.ipynb
+++ b/pandas.ipynb
@@ -860,7 +860,6 @@
    "source": [
     "You might notice that we only got back information on two of our columns here. `df.describe()` only works on numeric columns.\n",
     "\n",
-    "## Asking Questions\n",
     "At this point, we can start asking questions of our data. \n",
     "\n",
     "- Which facility has the largest capacity?\n",
@@ -1353,11 +1352,183 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All facilities:  644\n",
+      "Facilities with more than 10 bed capacity:  631\n"
+     ]
+    }
+   ],
    "source": [
-    "large_nfacs = nfacs[n]"
+    "large_nfacs = nfacs[nfacs['capacity'] > 10]\n",
+    "\n",
+    "print('All facilities: ',len(nfacs))\n",
+    "print('Facilities with more than 10 bed capacity: ',len(large_nfacs))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Merging\n",
+    "You might be thinking: \"This facility data is nice but there's not story here.\"\n",
+    "\n",
+    "You're right... you're right... I KNOW you're right.\n",
+    "\n",
+    "So let's mess around with some data that has some more information."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>complaint_id</th>\n",
+       "      <th>facility_id</th>\n",
+       "      <th>facility_type</th>\n",
+       "      <th>incident_date</th>\n",
+       "      <th>notes</th>\n",
+       "      <th>severity</th>\n",
+       "      <th>fine</th>\n",
+       "      <th>Facility Invest Results Abuse</th>\n",
+       "      <th>Facility Invest Results Rule</th>\n",
+       "      <th>Type Of Abuse</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>OT105179A</td>\n",
+       "      <td>385008</td>\n",
+       "      <td>NF</td>\n",
+       "      <td>2010-08-31</td>\n",
+       "      <td>RV reported asking staff to change him/her pri...</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Not Substantiated</td>\n",
+       "      <td>Substantiated</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>OT105179B</td>\n",
+       "      <td>385008</td>\n",
+       "      <td>NF</td>\n",
+       "      <td>2010-08-31</td>\n",
+       "      <td>RV reported staff answered his/her call light,...</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Not Substantiated</td>\n",
+       "      <td>Substantiated</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>OT105179C</td>\n",
+       "      <td>385008</td>\n",
+       "      <td>NF</td>\n",
+       "      <td>2010-08-31</td>\n",
+       "      <td>RV reported an unknown \"not RV's regular staff...</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Not Substantiated</td>\n",
+       "      <td>Substantiated</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>OR0000656000</td>\n",
+       "      <td>385008</td>\n",
+       "      <td>NF</td>\n",
+       "      <td>2010-12-21</td>\n",
+       "      <td>Resident 1 was admitted with multiple diagnose...</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Substantiated</td>\n",
+       "      <td>Substantiated</td>\n",
+       "      <td>Neglect</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>OT105397</td>\n",
+       "      <td>385008</td>\n",
+       "      <td>NF</td>\n",
+       "      <td>2010-09-17</td>\n",
+       "      <td>RV was admitted 9/17/10 with multiple diagnose...</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Not Substantiated</td>\n",
+       "      <td>Substantiated</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   complaint_id facility_id facility_type incident_date  \\\n",
+       "0     OT105179A      385008            NF    2010-08-31   \n",
+       "1     OT105179B      385008            NF    2010-08-31   \n",
+       "2     OT105179C      385008            NF    2010-08-31   \n",
+       "3  OR0000656000      385008            NF    2010-12-21   \n",
+       "4      OT105397      385008            NF    2010-09-17   \n",
+       "\n",
+       "                                               notes  severity  fine  \\\n",
+       "0  RV reported asking staff to change him/her pri...       2.0   0.0   \n",
+       "1  RV reported staff answered his/her call light,...       2.0   0.0   \n",
+       "2  RV reported an unknown \"not RV's regular staff...       2.0   0.0   \n",
+       "3  Resident 1 was admitted with multiple diagnose...       3.0   0.0   \n",
+       "4  RV was admitted 9/17/10 with multiple diagnose...       2.0   0.0   \n",
+       "\n",
+       "  Facility Invest Results Abuse Facility Invest Results Rule Type Of Abuse  \n",
+       "0             Not Substantiated                Substantiated           NaN  \n",
+       "1             Not Substantiated                Substantiated           NaN  \n",
+       "2             Not Substantiated                Substantiated           NaN  \n",
+       "3                 Substantiated                Substantiated       Neglect  \n",
+       "4             Not Substantiated                Substantiated           NaN  "
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ncomplaints = pd.read_excel('data/complaints.xlsx')\n",
+    "ncomplaints.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Notice anything familiar here? That's right, we've got a `facility_id` column in this dataset also! Hooray!"
    ]
   }
  ],
