added file path to tutorial

--- a/intro_to_python.ipynb
+++ b/intro_to_python.ipynb
@@ -72,7 +72,7 @@
     "\n",
     "We are going to be working in a jupyter notebook. Jupyter is a program that allows us to write, test, and share python code in handy cells.\n",
     "\n",
-    "Let's start our notebook. Open a terminal and navigate to LOCATION. \n",
+    "Let's start our notebook. Open a terminal and navigate to `~/Desktop/hands_on_classes/python_1_the_fundamentals_repeat_1651`. \n",
     "\n",
     "Type `pipenv run jupyter lab` into the terminal, and it will open up a notebook in a browser. \n",
     "\n",
