--- a/pandas.ipynb
+++ b/pandas.ipynb
@@ -1528,8 +1528,519 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice anything familiar here? That's right, we've got a `facility_id` column in this dataset also! Hooray!"
+    "Notice anything familiar here? That's right, we've got a `facility_id` column in this dataset also! Hooray!\n",
+    "\n",
+    "So let's think about this... what benefit might there be in merging together Facility records with Complaint records?\n",
+    "\n",
+    "We can do a `.groupby()` on Complaints `facility_id` to get the total number of complaints per facility, but remember, some of our facilities have as few as 5 beds, and some as many as 241 beds. It would make sense for the larger facilities to have more complaints. \n",
+    "\n",
+    "So maybe we can first do a `.groupby()` on Complaints `facility_id` and then merge in the Facility data so we can calculate a complaint rate?"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>complaint_id</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>facility_id</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>385008</th>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>385010</th>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>385015</th>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>385018</th>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>385024</th>\n",
+       "      <td>40</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             complaint_id\n",
+       "facility_id              \n",
+       "385008                  9\n",
+       "385010                  8\n",
+       "385015                 17\n",
+       "385018                 17\n",
+       "385024                 40"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fac_complaints = ncomplaints.groupby('facility_id').count()[[\"complaint_id\"]]\n",
+    "fac_complaints.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "But that `complaint_id` column is no longer the complaint_id, so let's change that."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>complaints</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>facility_id</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>385008</th>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>385010</th>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>385015</th>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>385018</th>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>385024</th>\n",
+       "      <td>40</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             complaints\n",
+       "facility_id            \n",
+       "385008                9\n",
+       "385010                8\n",
+       "385015               17\n",
+       "385018               17\n",
+       "385024               40"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fac_complaints = fac_complaints.rename(columns={\"complaint_id\":\"complaints\"})\n",
+    "fac_complaints.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we can merge the Facility data with the Complaint data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>facid</th>\n",
+       "      <th>fac_type</th>\n",
+       "      <th>capacity</th>\n",
+       "      <th>fac_name</th>\n",
+       "      <th>fac_address</th>\n",
+       "      <th>city_state_zip</th>\n",
+       "      <th>Unnamed: 6</th>\n",
+       "      <th>owner</th>\n",
+       "      <th>operator</th>\n",
+       "      <th>state</th>\n",
+       "      <th>complaints</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>385008</td>\n",
+       "      <td>NF</td>\n",
+       "      <td>96.0</td>\n",
+       "      <td>Presbyterian Community Care Center</td>\n",
+       "      <td>1085 N Oregon St</td>\n",
+       "      <td>Ontario, OR 97914</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Presbyterian Nursing Home, Inc.</td>\n",
+       "      <td>Presbyterian Nursing Home, Inc.</td>\n",
+       "      <td>OR</td>\n",
+       "      <td>9.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>385010</td>\n",
+       "      <td>NF</td>\n",
+       "      <td>159.0</td>\n",
+       "      <td>Laurelhurst Village Rehabilitation Center</td>\n",
+       "      <td>3060 SE Stark St</td>\n",
+       "      <td>Portland, OR 97214</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Laurelhurst Operations, LLC</td>\n",
+       "      <td>Laurelhurst Operations, LLC</td>\n",
+       "      <td>OR</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>385015</td>\n",
+       "      <td>NF</td>\n",
+       "      <td>128.0</td>\n",
+       "      <td>Regency Gresham Nursing &amp; Rehabilitation Center</td>\n",
+       "      <td>5905 SE Powell Valley Rd</td>\n",
+       "      <td>Gresham, OR 97080</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Regency Gresham Nursing &amp; Rehabilitation Cente...</td>\n",
+       "      <td>Regency Pacific Management, LLC</td>\n",
+       "      <td>OR</td>\n",
+       "      <td>17.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>385018</td>\n",
+       "      <td>NF</td>\n",
+       "      <td>98.0</td>\n",
+       "      <td>Providence Benedictine Nursing Center</td>\n",
+       "      <td>540 South Main St</td>\n",
+       "      <td>Mt. Angel, OR 97362</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Providence Health &amp; Services - Oregon</td>\n",
+       "      <td>Providence Health &amp; Services - Oregon</td>\n",
+       "      <td>OR</td>\n",
+       "      <td>17.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>385024</td>\n",
+       "      <td>NF</td>\n",
+       "      <td>91.0</td>\n",
+       "      <td>Avamere Health Services of Rogue Valley</td>\n",
+       "      <td>625 Stevens St</td>\n",
+       "      <td>Medford, OR 97504</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Medford Operations, LLC</td>\n",
+       "      <td>Medford Operations, LLC</td>\n",
+       "      <td>OR</td>\n",
+       "      <td>40.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    facid fac_type  capacity                                         fac_name  \\\n",
+       "0  385008       NF      96.0               Presbyterian Community Care Center   \n",
+       "1  385010       NF     159.0        Laurelhurst Village Rehabilitation Center   \n",
+       "2  385015       NF     128.0  Regency Gresham Nursing & Rehabilitation Center   \n",
+       "3  385018       NF      98.0            Providence Benedictine Nursing Center   \n",
+       "4  385024       NF      91.0          Avamere Health Services of Rogue Valley   \n",
+       "\n",
+       "                fac_address       city_state_zip  Unnamed: 6  \\\n",
+       "0          1085 N Oregon St    Ontario, OR 97914         NaN   \n",
+       "1          3060 SE Stark St   Portland, OR 97214         NaN   \n",
+       "2  5905 SE Powell Valley Rd    Gresham, OR 97080         NaN   \n",
+       "3         540 South Main St  Mt. Angel, OR 97362         NaN   \n",
+       "4            625 Stevens St    Medford, OR 97504         NaN   \n",
+       "\n",
+       "                                               owner  \\\n",
+       "0                    Presbyterian Nursing Home, Inc.   \n",
+       "1                        Laurelhurst Operations, LLC   \n",
+       "2  Regency Gresham Nursing & Rehabilitation Cente...   \n",
+       "3              Providence Health & Services - Oregon   \n",
+       "4                            Medford Operations, LLC   \n",
+       "\n",
+       "                                operator state  complaints  \n",
+       "0        Presbyterian Nursing Home, Inc.    OR         9.0  \n",
+       "1            Laurelhurst Operations, LLC    OR         8.0  \n",
+       "2        Regency Pacific Management, LLC    OR        17.0  \n",
+       "3  Providence Health & Services - Oregon    OR        17.0  \n",
+       "4                Medford Operations, LLC    OR        40.0  "
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fac_merge = nfacs.merge(fac_complaints, left_on=\"facid\", right_on=\"facility_id\",how=\"left\")\n",
+    "fac_merge.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now let's calculate that complaint rate column."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>facid</th>\n",
+       "      <th>fac_type</th>\n",
+       "      <th>capacity</th>\n",
+       "      <th>fac_name</th>\n",
+       "      <th>fac_address</th>\n",
+       "      <th>city_state_zip</th>\n",
+       "      <th>Unnamed: 6</th>\n",
+       "      <th>owner</th>\n",
+       "      <th>operator</th>\n",
+       "      <th>state</th>\n",
+       "      <th>complaints</th>\n",
+       "      <th>complaint_rate</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>385008</td>\n",
+       "      <td>NF</td>\n",
+       "      <td>96.0</td>\n",
+       "      <td>Presbyterian Community Care Center</td>\n",
+       "      <td>1085 N Oregon St</td>\n",
+       "      <td>Ontario, OR 97914</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Presbyterian Nursing Home, Inc.</td>\n",
+       "      <td>Presbyterian Nursing Home, Inc.</td>\n",
+       "      <td>OR</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>9.375000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>385010</td>\n",
+       "      <td>NF</td>\n",
+       "      <td>159.0</td>\n",
+       "      <td>Laurelhurst Village Rehabilitation Center</td>\n",
+       "      <td>3060 SE Stark St</td>\n",
+       "      <td>Portland, OR 97214</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Laurelhurst Operations, LLC</td>\n",
+       "      <td>Laurelhurst Operations, LLC</td>\n",
+       "      <td>OR</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>5.031447</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>385015</td>\n",
+       "      <td>NF</td>\n",
+       "      <td>128.0</td>\n",
+       "      <td>Regency Gresham Nursing &amp; Rehabilitation Center</td>\n",
+       "      <td>5905 SE Powell Valley Rd</td>\n",
+       "      <td>Gresham, OR 97080</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Regency Gresham Nursing &amp; Rehabilitation Cente...</td>\n",
+       "      <td>Regency Pacific Management, LLC</td>\n",
+       "      <td>OR</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>13.281250</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>385018</td>\n",
+       "      <td>NF</td>\n",
+       "      <td>98.0</td>\n",
+       "      <td>Providence Benedictine Nursing Center</td>\n",
+       "      <td>540 South Main St</td>\n",
+       "      <td>Mt. Angel, OR 97362</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Providence Health &amp; Services - Oregon</td>\n",
+       "      <td>Providence Health &amp; Services - Oregon</td>\n",
+       "      <td>OR</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>17.346939</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>385024</td>\n",
+       "      <td>NF</td>\n",
+       "      <td>91.0</td>\n",
+       "      <td>Avamere Health Services of Rogue Valley</td>\n",
+       "      <td>625 Stevens St</td>\n",
+       "      <td>Medford, OR 97504</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Medford Operations, LLC</td>\n",
+       "      <td>Medford Operations, LLC</td>\n",
+       "      <td>OR</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>43.956044</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    facid fac_type  capacity                                         fac_name  \\\n",
+       "0  385008       NF      96.0               Presbyterian Community Care Center   \n",
+       "1  385010       NF     159.0        Laurelhurst Village Rehabilitation Center   \n",
+       "2  385015       NF     128.0  Regency Gresham Nursing & Rehabilitation Center   \n",
+       "3  385018       NF      98.0            Providence Benedictine Nursing Center   \n",
+       "4  385024       NF      91.0          Avamere Health Services of Rogue Valley   \n",
+       "\n",
+       "                fac_address       city_state_zip  Unnamed: 6  \\\n",
+       "0          1085 N Oregon St    Ontario, OR 97914         NaN   \n",
+       "1          3060 SE Stark St   Portland, OR 97214         NaN   \n",
+       "2  5905 SE Powell Valley Rd    Gresham, OR 97080         NaN   \n",
+       "3         540 South Main St  Mt. Angel, OR 97362         NaN   \n",
+       "4            625 Stevens St    Medford, OR 97504         NaN   \n",
+       "\n",
+       "                                               owner  \\\n",
+       "0                    Presbyterian Nursing Home, Inc.   \n",
+       "1                        Laurelhurst Operations, LLC   \n",
+       "2  Regency Gresham Nursing & Rehabilitation Cente...   \n",
+       "3              Providence Health & Services - Oregon   \n",
+       "4                            Medford Operations, LLC   \n",
+       "\n",
+       "                                operator state  complaints  complaint_rate  \n",
+       "0        Presbyterian Nursing Home, Inc.    OR         9.0        9.375000  \n",
+       "1            Laurelhurst Operations, LLC    OR         8.0        5.031447  \n",
+       "2        Regency Pacific Management, LLC    OR        17.0       13.281250  \n",
+       "3  Providence Health & Services - Oregon    OR        17.0       17.346939  \n",
+       "4                Medford Operations, LLC    OR        40.0       43.956044  "
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fac_merge['complaint_rate'] = (fac_merge['complaints'] / fac_merge['capacity'])*100\n",
+    "fac_merge.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The way we would read that complaint column is: Presbyterian Community Care Center has a rate of 9.37 complaints per 100 beds."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
