some minor text changes to class 1

--- a/intro_to_python.ipynb
+++ b/intro_to_python.ipynb
@@ -311,7 +311,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I don't spend too much time thinking about the difference between floats and ints, but it does matter. \n",
+    "The difference between floats and ints does matter. \n",
     "\n",
     "You can convert between the two... but be careful. That can cause some weird rounding problems you might not expect! "
    ]
@@ -567,7 +567,7 @@
     "numbers = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
     "\n",
     "\n",
-    "# indentation matters in a for loop\n",
+    "# indentation matters in a for loop. Many Python programs will automatically indent for you\n",
     "for number in numbers:\n",
     "    print(f\"{number} is a {type(number)}\")\n",
     "\n",
