added small edits to intro

--- a/1_intro_to_python.ipynb
+++ b/1_intro_to_python.ipynb
@@ -43,9 +43,9 @@
     "You can use Python to scrape the web, make visuals, do statistics, write up the results of an investigation, build a website, and a whole lot more. \n",
     "\n",
     "#### Python is reproducible\n",
-    "*Reproducibility* is important\n",
+    "*Reproducibility* is important.\n",
     "\n",
-    "Excel is not reproducible. With Python, I can hand someone my original data and my code and they can re-create all my work with a few keystrokes. This is not possible with Excel unless you take meticulous notes about all the changes you make. Reproducibility reduces errors and allows for fact-checking\n",
+    "Excel is not reproducible. With Python, I can hand someone my original data and my code and they can re-create all my work with a few keystrokes. This is not possible with Excel unless you take meticulous notes about all the changes you make. Reproducibility reduces errors and allows for fact-checking.\n",
     "\n",
     "If I get new data or I make a change to the data, I can run the same script and update my results. \n",
     "\n",
@@ -72,7 +72,8 @@
     "\n",
     "We are going to be working in a jupyter notebook. Jupyter is a program that allows us to write, test, and share python code in handy cells.\n",
     "\n",
-    "Let's start our notebook. Open a terminal and navigate to `~/Desktop/hands_on_classes/python_1_the_fundamentals_repeat_1651`. \n",
+    "Let's start our notebook. Open a terminal and navigate to:\n",
+    "`~/Desktop/hands_on_classes/python_1_the_fundamentals_repeat_1651`. \n",
     "\n",
     "Type `pipenv run jupyter lab` into the terminal, and it will open up a notebook in a browser. \n",
     "\n",
@@ -112,12 +113,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Lets create a variable\n",
-    "# A variable can be almost set of characters (No spaces!)\n",
+    "# A variable can be almost any set of characters (No spaces!)\n",
     "\n",
     "# Pikachu was the name of a pet snake I had as a kid :) \n",
     "my_favorite_snake = pikachu\n",
@@ -149,13 +150,13 @@
     "## Data Types\n",
     "\n",
     "Python has several different data types. \n",
-    "* Strings -> character data. Strings start and with quotation marks. \n",
+    "* Strings -> character data. Strings start and end with quotation marks. \n",
     "* Intergers -> whole numbers\n",
     "* Float -> floating point numbers. Numbers with decimal points\n",
     "* Booleans -> True or False (capitalization matters!) \n",
     "\n",
     "Things to keep in mind:\n",
-    "* some words are used by Python and can't be used for variables (`def`, `import`, `from`, `in`, `while`, `for`, `if`, `elif`, `else`, `print`, `input`, and many more.)"
+    "* some words are used by Python and can't be used for variables (`def`, `import`, `from`, `in`, `while`, `for`, `if`, `elif`, `else`, `print`, `input`, and [many more](https://docs.python.org/3/reference/lexical_analysis.html#keywords).)"
    ]
   },
   {
@@ -164,7 +165,7 @@
    "source": [
     "### Strings\n",
     "\n",
-    "Anything between quotation marks, Python considers a string. Text data, basically"
+    "Anything between quotation marks, Python considers a string. Text data, basically."
    ]
   },
   {
@@ -406,7 +407,8 @@
    "outputs": [],
    "source": [
     "# Something is wrong with our list! Let's add an element. \n",
-    "# Notice we call the append function at the end of our variable. Don't be afraid to look up different functions and how to use them! \n",
+    "# Notice we call the append function at the end of our variable. \n",
+    "# Don't be afraid to look up different functions and how to use them! \n",
     "months.append('December')\n",
     "\n",
     "print(months)"
@@ -418,7 +420,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# We can get the position of different elements in the list by using indexing. You can get the element at the n-th position on the list \n",
+    "# We can get the position of different elements in the list by using indexing. \n",
+    "# You can get the element at the n-th position on the list \n",
     "\n",
     "# What do you think will happen if we do this? \n",
     "print(months[0])"
@@ -549,7 +552,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## For Loops and if else statements \n",
+    "## For Loops and if/else statements \n",
     "\n",
     "For loops and if/else statements are very important! \n",
     "\n",
@@ -687,7 +690,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
