added small edits to cleaning/viz

--- a/3_cleaning_and_viz.ipynb
+++ b/3_cleaning_and_viz.ipynb
@@ -1311,7 +1311,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Fan-bloody-tastic. Now that we can be pretty confident we don't have duplicates, we can turn out attention to that combined `city_state_zip` column. It's _almost_ helpful. Surely we'd prefer to look at these facilities by city or zip code separately, so we're going to want them in separate columns.\n",
+    "Fan-bloody-tastic. Now that we can be pretty confident we don't have duplicates, we can turn our attention to that combined `city_state_zip` column. It's _almost_ helpful. Surely we'd prefer to look at these facilities by city or zip code separately, so we're going to want them in separate columns.\n",
     "\n",
     "The last five characters of each `city_state_zip` entry seem to be our zip codes, so we'll `slice` those off on their own."
    ]
@@ -4572,7 +4572,7 @@
    "source": [
     "These are not the prettiest charts ever -- and they don't have to be. They're another tool for quickly analyzing and understanding your data. And if you're working with a designer or want to plug your results into another visualization engine, this can help you decide the best tool to use or the best representation to make.\n",
     "\n",
-    "If you're looking to up your visualization game, check out Python libraries [Altair]('https://altair-viz.github.io/') and [seaborn]('https://seaborn.pydata.org/'), which will give you prettier static charts right out of the box, or [bokeh]('https://bokeh.pydata.org/en/latest/') for interactive graphics."
+    "If you're looking to up your visualization game, here's more on what we used today, [matplotlib](https://matplotlib.org/gallery/index.html). You should also check out Python libraries [Altair]('https://altair-viz.github.io/') and [seaborn]('https://seaborn.pydata.org/'), which will give you prettier static charts right out of the box, or [bokeh]('https://bokeh.pydata.org/en/latest/') for interactive graphics."
    ]
   }
  ],
@@ -4592,7 +4592,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
