kudos to the last year folks

--- a/2_pandas.ipynb
+++ b/2_pandas.ipynb
@@ -6,6 +6,8 @@
    "source": [
     "# 🐼 Pandas for Data Analysis\n",
     "\n",
+    "First, we'd like to give a HUGE shout out to [the folks who did these sessions last year](https://github.com/kcecireyes/nicar-2018-python). We owe you beverage. \n",
+    "\n",
     "Pandas is a python library that helps you quickly interview, analyze, manipulate and process data. A python library is a collection of functions and methods that allow you to write less code in order to do the same thing.\n",
     "\n",
     "For example, below is an example of how you would import `.csv` data without pandas:"
