--- a/1_intro_to_python.ipynb
+++ b/1_intro_to_python.ipynb
@@ -196,7 +196,7 @@
    "outputs": [],
    "source": [
     "# We can break the string into pieces based on spaces. \n",
-    "city_hall.split()"
+    "city_hall.split(\",\")"
    ]
   },
   {
@@ -612,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -662,13 +662,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Seattle has 377.49153879012914 subscribers per 1000 people\n",
+      "Portland has 239.81801238831332 subscribers per 1000 people\n",
+      "Denver has 359.42868577575746 subscribers per 1000 people\n",
+      "Minneapolis has 682.6754370387208 subscribers per 1000 people\n",
+      "Boston has 397.6269199506472 subscribers per 1000 people\n"
+     ]
+    }
+   ],
+   "source": [
+    "for dictionary in newspaper_details:\n",
+    "    pop = dictionary['city_population']\n",
+    "    if type(dictionary['circulation']) == int:\n",
+    "        circ = dictionary['circulation']\n",
+    "    else:\n",
+    "        circ = int(dictionary['circulation'].replace(',',''))\n",
+    "    circ_rate = circ/pop * 1000\n",
+    "    \n",
+    "    print(f\"{dictionary['city']} has {circ_rate} subscribers per 1000 people\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "for dictionary in newspaper_details:\n",
-    "    "
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -687,7 +713,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
