adding note to change data viz to altair

--- a/3_cleaning_and_viz.ipynb
+++ b/3_cleaning_and_viz.ipynb
@@ -1219,7 +1219,9 @@
     "\n",
     "We're going to drop the row we don't want by selecting its index number, 165, and then resetting the index so that it's numbered sequentially again. For safety, we're also going to write the result to a new variable so that, if we mess up and have to rerun this cell, we won't run the risk of dropping any other row that gets numbered 165.\n",
     "\n",
-    "Speaking of messing up: In your Pandas adventures, there's probably going to be a point where you've got a lot of variables saved and things just aren't doing what you think they should be doing. There's an easy way to start fresh in those cases — just select Kernel>Restart & Clear Output to restart so you can run everything from the beginning, or select Kernel>Restart & Run All to clear all variables and rerun your whole notebook."
+    "Speaking of messing up: In your Pandas adventures, there's probably going to be a point where you've got a lot of variables saved and things just aren't doing what you think they should be doing. \n",
+    "\n",
+    "There's an easy way to start fresh in those cases — just select `Kernel` >`Restart and Clear Output` to restart so you can run everything from the beginning, or select `Kernel` > `Restart and Run All` to clear all variables and rerun your whole notebook."
    ]
   },
   {
@@ -4443,7 +4445,9 @@
    "source": [
     "## And now we become data artists\n",
     "\n",
-    "First, some tools for drawing the data."
+    "First, some tools for drawing the data.\n",
+    "\n",
+    "NOTE TO MYSELF - CHANGE TO ALTAIR "
    ]
   },
   {
